# Trees-Everywhere

./: .env_sample  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
project/: asgi.py  settings.py  urls.py  wsgi.py
trees/: admin.py  models.py  tests.py  views.py
trees/api/: serializers.py  viewsets.py
trees/fixtures/: account_data.json  planted_tree_data.json  tree_data.json  user_data.json
trees/migrations/: 0001_initial.py  0002_alter_plantedtree_account_alter_user_groups_and_more.py  0003_remove_plantedtree_age.py
trees/templates/: account_dashboard.html  base.html  detail-plant-tree-modal.html  login.html  plant-new-tree-modal.html  user_dashboard.html
